[package]
name = "fastdiv"
version = "0.1.0"
edition = "2021"
authors = ["sarah <>"]
description = "Perform fast division by a runtime constant."
readme = "README.md"
repository = "https://github.com/kitegi/fastdiv/"
license = "MIT"
keywords = ["division", "arithmetic"]

[dependencies]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "fastdiv"
harness = false
